src/test/ui/hkt/unsized_local_binding_old.stderr
error[E0277]: the size for values of type `[u32]` cannot be known at compilation time
  --> $DIR/unsized_local_binding.rs:4:12
   |
LL |     let i: I<[u32]> = todo!();
   |            ^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u32]`
note: required by a bound in `test::I`
  --> $DIR/unsized_local_binding.rs:3:12
   |
LL | fn test<I<%J>>() {
   |            ^ required by this bound in `test::I`
help: consider relaxing the implicit `Sized` restriction
   |
LL | fn test<I<%J: ?Sized>>() {
   |             ++++++++

error[E0277]: the size for values of type `[u32]` cannot be known at compilation time
  --> $DIR/unsized_local_binding.rs:4:9
   |
LL |     let i: I<[u32]> = todo!();
   |         ^ doesn't have a size known at compile-time
   |
   = help: within `I<[u32]>`, the trait `Sized` is not implemented for `[u32]`
   = note: required because it appears within the type `I<[u32]>`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature
help: consider borrowing here
   |
LL |     let i: &I<[u32]> = todo!();
   |            +

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
